# luna-next-cardshell

./: CMakeLists.txt  COPYING  README.md  manifest.json  qmldir
files/tweaks/: luna-next-cardshell.json
qml/: BootLoader.qml  CardShell.qml  CardsArea.qml  CardsPage.qml  DashboardArea.qml  FirstUseShell.qml  LuneOSViewRoot.qml  NotificationArea.qml  NotificationItem.qml  OrientationHelper.qml  SIMPinWindowArea.qml  SystemMenuPage.qml  WindowStateStub.js  luna-next-qml.qmlproject  main.qml  mainDesktop.qml
qml/Alerts/: PowerMenu.qml  VolumeControlAlert.qml
qml/AppTweaks/: AppTweaks.qml  qmldir
qml/CardView/: CardGroupDelegate.qml  CardGroupListView.qml  CardGroupModel.qml  CardListView.qml  CardListWindowDelegate.qml  CardView.qml  CardWindow.qml  CardWindowDelegate.qml  CardWindowSplash.qml  CardWindowWrapper.qml  SlidingItemArea.qml  SwipeableCard.qml
qml/Compositor/: DummyWindow.qml  WindowManager.qml  WindowManagerServices.js  WindowWrapper.qml
qml/Connectors/: AirplaneModeService.qml  BatteryService.qml  BlueToothService.qml  BluetoothDevice.qml  BluetoothService.qml  ServiceStatus.qml  TelephonyService.qml  WanService.qml  WiFiService.qml  qmldir
qml/Dashboard/: Dashboard.qml  FullNotificationDelegate.qml
qml/DockMode/: AnalogClock.qml  Clocks.qml  DigitalClock.qml  DockMode.qml
qml/DockModeTime/: AnalogClock.qml  Clocks.qml
qml/JustType/: JustTypeField.qml
qml/LaunchBar/: AppLauncher.qml  DraggableAppIcon.qml  DraggableAppIconDelegateModel.qml  FullLauncher.qml  JustTypeField.qml  JustTypeLauncher.qml  LaunchBar.qml  LaunchableAppIcon.qml  (+2 more)
(+153 files in other folders)
